Refactor URL Filters - Advanced users can now customize the filters or add their own via the config.json file.